# capstone-2026-usv

./: docker-compose.yaml
docker/: Dockerfile  docker
src/setup/: linux_packages.txt  requirements.txt  ros_linux_packages.txt  setup.sh
src/usv_autonomy/: package.xml  setup.cfg  setup.py
src/usv_autonomy/launch/: usv_launch.py
src/usv_autonomy/usv_autonomy/: detection_node.py  label_map.py  mission_node.py
src/usv_autonomy/usv_autonomy/autonomy/: buoy_tasks.py  dstar_lite.py  mission_manager.py  object_localizer.py  object_tracker.py  obstacle_avoidance.py
src/usv_autonomy/usv_autonomy/mavlink/: connection.py  mission.py
src/usv_msgs/: CMakeLists.txt  package.xml
src/usv_msgs/msg/: Detection.msg  DetectionArray.msg  YoloDetection.msg  YoloDetectionArray.msg
